--- a/index.html
+++ b/index.html
@@ -140,7 +140,12 @@ p span.displaynone { display:none; }
 	<a href="https://scholar.google.com.tr/citations?user=5l2Aq4kAAAAJ&hl=en&oi=ao"><i class="ai ai-google-scholar " style="font-size:40px"></i></a>
 	&nbsp;
 	<a id='scramble' class="fa fa-envelope" style="font-size:40px" ></a>
-	<br></br>
+  <br>
+  <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7935919&style=0025&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>
+
+	</br>
   <p>Copyleft © 2022 Resul Tugay</p>
 </div>
 <script src="assets/unscramble.js"></script>
