--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="keywords" content="htmlcss bootstrap menu, scrollspy, navbar scroll, menu CSS examples" />
-<meta name="description" content="Bootstrap 5 navbar link on click go to section with id, with smooth scroll animation effect, html css source code" />
+<meta name="keywords" content="Resul Tugay" />
+<meta name="description" content="Resul Tugay" />
+
+
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:locale" content="en_US" />
+<link rel="canonical" href="/" />
+<meta property="og:url" content="/" />
+<meta property="og:site_name" content="Resul Tugay" />
+<script type="application/ld+json">
+{"@type":"WebSite","url":"/","name":"Resul Tugay","headline":"Resul Tugay","@context":"http://schema.org"}</script>
+
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
 
 <title>Resul Tugay</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
