--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 <script type="application/ld+json">
 {"@type":"WebSite","url":"/","name":"Resul Tugay","headline":"Resul Tugay","@context":"http://schema.org"}</script>
 
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="QzOYYorbgwP6cQluJH_ErRjmofaTJXFDBxRtxJ0TToM" />
+
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-
-
 <title>Resul Tugay</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"crossorigin="anonymous"></script>
-
 <link rel="stylesheet" href="assets/main.css">
-
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed:ital@1&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
