news section added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <div id="main_nav">
 	<ul class="nav nav-pills ms-auto" style="font-family: 'Source Sans', sans-serif;">
 		<li class="nav-item"><a class="nav-link scrollto" href="#" style="color:#000"> about </a></li>
+    <li class="nav-item"><a class="nav-link scrollto" href="#news" style="color:#000"> news</a></li>
 		<li class="nav-item"><a class="nav-link scrollto" href="#publications" style="color:#000"> publications</a></li>
 		<li class="nav-item"><a class="nav-link scrollto" href="#teaching" style="color:#000"> teaching </a></li>
 	</ul>
@@ -62,7 +63,7 @@
 
 		<p> I'm a third year PhD student in the <a href="https://web.inf.ed.ac.uk/lfcs">LFCS</a> at School of Informatics,
 		<a href="https://www.ed.ac.uk/informatics">The University of Edinburgh</a> supervised by
-		<a href="https://homepages.inf.ed.ac.uk/wenfei/">Wenfei Fan</a>.
+		<a href="https://homepages.inf.ed.ac.uk/wenfei/">Prof. Wenfei Fan</a>.
 		I'm working on entity representation and learning on both relational and graph-structured data.
 		I develop distributed and parallel systems to manage large data.
 		</p>
@@ -72,6 +73,40 @@
 			still draw trees upside-down!
 		</p>
 	<div>
+
+</article>
+
+<br id="news">
+<hr>
+<h2> News  </h2>
+<article>
+<table >
+  <tr>
+    <td><strong>Nov 2021</strong></td>
+    <td style="width: 87%">
+        Our paper, <i>Linking Entities across Relations and Graphs</i>, has been accepted to ICDE 2022
+    </td>
+  </tr>
+  <tr>
+  <td> <strong>Nov 2021</strong> </td>
+    <td>
+        I became a research assistant at the University of Edinburgh
+    </td>
+  </tr>
+  <tr>
+    <td> <strong>Oct 2021</strong> </td>
+    <td>
+        I interviewed with Facebook
+    </td>
+  </tr>
+  <tr>
+    <td> <strong>Sep 2020 <strong></td>
+    <td>
+        I was nominated to Apple PhD scholarship as one of the 5 applicants by The University of Edinburgh
+    </td>
+  </tr>
+
+</table>
 
 </article>
 <br id="publications">
