thesis link added

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			  <a href="https://arxiv.org/pdf/2009.09748.pdf">[paper]</a> [code available upon request]</p>
 
 			  <p class="all"><strong>Hotel Recommendation System Based on User Profiles and Collaborative Filtering</strong> <br />
-										Bekir Berker Turker, Resul Tugay, Ipek Kizil, Şule Gündüz Öğüdücü, <em>UBMK</em>, 2019<br />
+										Bekir Berker Türker, Resul Tugay, Ipek Kızıl, Şule Gündüz Öğüdücü, <em>UBMK</em>, 2019<br />
 				<a href="https://arxiv.org/pdf/2009.14045.pdf">[paper]</a> [code belongs to the company]</p>
 
 				<p class="all"><strong>Ranky: An Approach to Solve Distributed SVD on Large Sparse Matrices</strong> <br />
@@ -133,12 +133,12 @@
 
 			  <p class="all"><strong>Distributed Bipartite Graph Clustering</strong> <br />
 										Resul Tugay, <em>MSc Thesis</em>, 2018<br />
- 					<a href="#">[paper]</a> <a href="https://bitbucket.org/resultugay/gpart-thesis">[code]</a>
+ 					<a href="https://tez.yok.gov.tr/UlusalTezMerkezi/tezDetay.jsp?id=geboD41-dgfgjZq3Zilkpg&no=tLZ5iM_D-9ZClQO4FvG5xw">[paper]</a> <a href="https://bitbucket.org/resultugay/gpart-thesis">[code]</a>
 
 				<p class="all"><strong>Demand Prediction using Machine Learning Methods and Stacked Generalization</strong> <br />
 								Resul Tugay, Şule Gündüz Öğüdücü , <em>DATA</em>, 2017<br />
 
-				<a href="https://arxiv.org/pdf/2009.09756.pdf">[paper]</a></p>
+				<a href="https://arxiv.org/pdf/2009.09756.pdf">[paper]</a> [code belongs to the company]</p>
 
 
 		  </article>
