--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <tr>
   <td> <strong>Nov 2021</strong> </td>
     <td>
-        I became a research assistant at the University of Edinburgh
+        I became a research assistant at The University of Edinburgh
     </td>
   </tr>
   <tr>
@@ -102,7 +102,7 @@
   <tr>
     <td> <strong>Sep 2020 <strong></td>
     <td>
-        I was nominated to Apple PhD scholarship as one of the 5 applicants by The University of Edinburgh
+        I was nominated to be an Apple AI PhD Fellow as one of the 5 students by The University of Edinburgh
     </td>
   </tr>
 
@@ -167,7 +167,7 @@
 				<p class="all"><strong>Formal Languages and Automata</strong>,<small><i>Istanbul Technical University</i></small>  <br />
 								Teaching Assistant, Tolga Ovatman, Spring 2016<br />
 				<p class="all"><strong>Database Management Systems</strong>,<small><i>Istanbul Technical University</i></small>  <br />
-								Teaching Assistant, Sule Gunduz Oguducu & Turgut Uyar, Spring 2016 & 2017<br />
+								Teaching Assistant, Şule Gündüz Öğüdücü & Turgut Uyar, Spring 2016 & 2017<br />
 				<p class="all"><strong>Operating Systems</strong>,<small><i>Istanbul Technical University</i></small>  <br />
 								Teaching Assistant, Etaner Uyar, Spring 2017 & 2018<br />
 			</article>
