--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 <hr>
 <h2> Publications </h2>
       <article>
-				<p class="all"><strong>Linking Entities across Relations and Graphs</strong> <br />
+				<p class="all"><strong>Linking Entities across Relations and Graphs</strong> <small><i> Collaborated with Alibaba</i></small> <br />
 						Wenfei Fan, Ping Liu, Ruochun Jin, Resul Tugay, Wenyuan Yu, <em>ICDE</em>, 2022<br />
-
+            <small><i>Authors are alphabetically ordered by their surnames</i></small>
 				<p class="all"><strong>A deep hybrid model for recommendation systems</strong> <br />
 									  Muhammet Çakır, Şule Gündüz Öğüdücü, and Resul Tugay, <em>AIAI</em>, 2019<br />
 			  <a href="https://arxiv.org/pdf/2009.09748.pdf">[paper]</a> [code available upon request]</p>
