--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <h2> Publications </h2>
       <article>
 				<p class="all"><strong>Linking Entities across Relations and Graphs</strong> <small><i> Collaborated with Alibaba</i></small> <br />
-						Wenfei Fan, Ping Liu, Ruochun Jin, Resul Tugay, Wenyuan Yu, <em>ICDE</em>, 2022<br />
+						Wenfei Fan, Liang Geng, Ruochun Jin, Ping Liu, Resul Tugay, Wenyuan Yu, <em>ICDE</em>, 2022<br />
             <small><i>Authors are alphabetically ordered by their surnames</i></small>
 				<p class="all"><strong>A deep hybrid model for recommendation systems</strong> <br />
 									  Muhammet Çakır, Şule Gündüz Öğüdücü, and Resul Tugay, <em>AIAI</em>, 2019<br />
