--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
       <article>
 				<p class="all"><strong>Linking Entities across Relations and Graphs</strong> <small><i> Collaborated with Alibaba</i></small> <br />
 						Wenfei Fan, Liang Geng, Ruochun Jin, Ping Liu, Resul Tugay, Wenyuan Yu, <em>ICDE</em>, 2022<br />
-            <small><i>Authors are alphabetically ordered by their surnames</i></small>
+            <small><i>Authors are alphabetically ordered by their surnames</i></small> <br>
+            <a href="https://homepages.inf.ed.ac.uk/s1837143/HER_full.pdf">[paper]</a> [code belongs to the company]</p>
+
 				<p class="all"><strong>A deep hybrid model for recommendation systems</strong> <br />
 									  Muhammet Çakır, Şule Gündüz Öğüdücü, and Resul Tugay, <em>AIAI</em>, 2019<br />
 			  <a href="https://arxiv.org/pdf/2009.09748.pdf">[paper]</a> [code available upon request]</p>
