--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
 <article>
 <table >
   <tr>
+    <td><strong>Jan 2022</strong></td>
+    <td style="width: 87%">
+        I interviewed with Huawei London and Huawei Edinburgh
+    </td>
+  </tr>
+  <tr>
     <td><strong>Nov 2021</strong></td>
     <td style="width: 87%">
         Our paper, <i>Linking Entities across Relations and Graphs</i>, has been accepted to ICDE 2022
@@ -165,13 +171,13 @@
 								Teaching Assistant, Yusuf Yaslan, Spring 2017<br />
 				<p class="all"><strong>Operating Systems</strong>,<small><i>Istanbul Technical University</i></small>  <br />
 								Teaching Assistant, Etaner Uyar, Spring 2017 & 2018<br />
-
+        <p class="all"><strong>Operating Systems</strong>,<small><i>Istanbul Technical University</i></small>  <br />
+        				Teaching Assistant, Etaner Uyar, Spring 2017 & 2018<br />
 				<p class="all"><strong>Formal Languages and Automata</strong>,<small><i>Istanbul Technical University</i></small>  <br />
 								Teaching Assistant, Tolga Ovatman, Spring 2016<br />
 				<p class="all"><strong>Database Management Systems</strong>,<small><i>Istanbul Technical University</i></small>  <br />
 								Teaching Assistant, Şule Gündüz Öğüdücü & Turgut Uyar, Spring 2016 & 2017<br />
-				<p class="all"><strong>Operating Systems</strong>,<small><i>Istanbul Technical University</i></small>  <br />
-								Teaching Assistant, Etaner Uyar, Spring 2017 & 2018<br />
+
 			</article>
 </section>
 
@@ -190,9 +196,6 @@ p span.displaynone { display:none; }
 	&nbsp;
 	<a id='scramble' class="fa fa-envelope" style="font-size:40px" ></a>
   <br>
-  <!-- hitwebcounter Code START -->
-<a href="https://www.hitwebcounter.com" target="_blank">
-<img src="https://hitwebcounter.com/counter/counter.php?page=7935919&style=0025&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>
 
 	</br>
   <p>Copyleft © 2022 Resul Tugay</p>
