--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
 <article>
 <table >
   <tr>
+    <td><strong>Mar 2022</strong></td>
+    <td style="width: 87%">
+        I interviewed with TikTok
+    </td>
+  </tr>
+  <tr>
     <td><strong>Jan 2022</strong></td>
     <td style="width: 87%">
         I interviewed with Huawei London and Huawei Edinburgh
@@ -196,9 +202,8 @@ p span.displaynone { display:none; }
 	&nbsp;
 	<a id='scramble' class="fa fa-envelope" style="font-size:40px" ></a>
   <br>
-
 	</br>
-  <p>Copyleft © 2022 Resul Tugay</p>
+  <p>Copyleft ©  <script>document.write(new Date().getFullYear())</script> Resul Tugay</p>
 </div>
 <script src="assets/unscramble.js"></script>
 
