--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
   <tr>
     <td><strong>Mar 2022</strong></td>
     <td style="width: 87%">
+        I will be joining TikTok London as an ML Research intern between Aug-Dec 2022
+    </td>
+  </tr>
+  <tr>
+    <td><strong>Mar 2022</strong></td>
+    <td style="width: 87%">
+        I will be joining Huawei London as an ML Researcher intern between May-Aug 2022
+    </td>
+  </tr>
+  <tr>
+    <td><strong>Mar 2022</strong></td>
+    <td style="width: 87%">
         I interviewed with TikTok
     </td>
   </tr>
