--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <tr>
     <td><strong>Mar 2022</strong></td>
     <td style="width: 87%">
-        I will be joining Huawei London as an ML Researcher intern between May-Aug 2022
+        I will be joining Huawei London as an ML Research intern between May-Aug 2022
     </td>
   </tr>
   <tr>
