--- a/index.html
+++ b/index.html
@@ -81,16 +81,24 @@
 <h2> News  </h2>
 <article>
 <table >
+  <!--
   <tr>
     <td><strong>Mar 2022</strong></td>
     <td style="width: 87%">
         I will be joining TikTok London as an ML Research intern between Aug-Dec 2022
     </td>
   </tr>
+  -->
   <tr>
     <td><strong>Mar 2022</strong></td>
     <td style="width: 87%">
         I will be joining Huawei London as an ML Research intern between May-Aug 2022
+    </td>
+  </tr>
+  <tr>
+    <td><strong>Mar 2022</strong></td>
+    <td style="width: 87%">
+        I interviewed with Meta Core Machine Learning AI Team
     </td>
   </tr>
   <tr>
