--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
 
 		</h1>
 
-		<p> I'm a third year PhD student in the <a href="https://web.inf.ed.ac.uk/lfcs">LFCS</a> at School of Informatics,
-		<a href="https://www.ed.ac.uk/informatics">The University of Edinburgh</a> supervised by
-		<a href="https://homepages.inf.ed.ac.uk/wenfei/">Prof. Wenfei Fan</a>.
+		<p> I'm a third year PhD student supervised by
+		<a href="https://homepages.inf.ed.ac.uk/wenfei/" style="text-decoration:none">Prof. Wenfei Fan</a> at the <a href="https://www.ed.ac.uk/informatics" style="text-decoration:none">The University of Edinburgh</a> in the <a href="https://web.inf.ed.ac.uk/lfcs" style="text-decoration:none">School of Informatics</a>. I obtained the MSc in Computer Science
+    from the <a href="https://bbf.itu.edu.tr/en/home" style="text-decoration:none">Faculty of Computer and Informatics Engineering, Istanbul Technical University</a>,
+      working with <a href="https://scholar.google.com/citations?user=E5OlkJMAAAAJ&hl=en" style="text-decoration:none">
+       Prof. Sule Gunduz Oguducu</a>. My undergrad was also in computer engineering from Karadeniz Technical University.
 		I'm working on entity representation and learning on both relational and graph-structured data.
 		I develop distributed and parallel systems to manage large data.
 		</p>
