--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
   </tr>
   -->
   <tr>
+    <td><strong>May 2022</strong></td>
+    <td style="width: 87%">
+        I have joined Huawei London and l am working on Multi Domain Recommendation System
+    </td>
+  </tr>
+  <tr>
     <td><strong>Mar 2022</strong></td>
     <td style="width: 87%">
         I will be joining Huawei London as an ML Research intern between May-Aug 2022
@@ -152,7 +158,7 @@
 				<p class="all"><strong>Linking Entities across Relations and Graphs</strong> <small><i> Collaborated with Alibaba</i></small> <br />
 						Wenfei Fan, Liang Geng, Ruochun Jin, Ping Liu, Resul Tugay, Wenyuan Yu, <em>ICDE</em>, 2022<br />
             <small><i>Authors are alphabetically ordered by their surnames</i></small> <br>
-            <a href="https://homepages.inf.ed.ac.uk/s1837143/HER_full.pdf">[paper]</a> [code belongs to the company]</p>
+            <a href="https://homepages.inf.ed.ac.uk/s1837143/HER_full.pdf">[paper]</a><a href="https://video.computer.org/icde22-videos/paper_39.mp4.html">[video]</a><a href="assets/icde.pptx">[slides]</a><a href="https://github.com/resultugay/her-toy">[code]</a></p>
 
 				<p class="all"><strong>A deep hybrid model for recommendation systems</strong> <br />
 									  Muhammet Çakır, Şule Gündüz Öğüdücü, and Resul Tugay, <em>AIAI</em>, 2019<br />
