--- a/index.html
+++ b/index.html
@@ -83,14 +83,26 @@
 <h2> News  </h2>
 <article>
 <table >
-  <!--
   <tr>
-    <td><strong>Mar 2022</strong></td>
+    <td><strong>Aug 2022</strong></td>
     <td style="width: 87%">
-        I will be joining TikTok London as an ML Research intern between Aug-Dec 2022
+        I have started my internship at TikTok London as an ML Research intern
     </td>
   </tr>
-  -->
+  <tr>
+    <td><strong>Aug 2022</strong></td>
+    <td style="width: 87%">
+        I have successfully finished my internship at Huawei London
+    </td>
+  </tr>
+
+  <tr>
+    <td><strong>July 2022</strong></td>
+    <td style="width: 87%">
+        We have submitted out paper to SIGMOD 2023
+    </td>
+  </tr>
+
   <tr>
     <td><strong>May 2022</strong></td>
     <td style="width: 87%">
