--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <tr>
     <td><strong>July 2022</strong></td>
     <td style="width: 87%">
-        We have submitted out paper to SIGMOD 2023
+        We have submitted our paper to SIGMOD 2023
     </td>
   </tr>
 
