--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 		</h1>
 
-		<p> I'm a third year PhD student supervised by
+		<p> I'm a forth year PhD student supervised by
 		<a href="https://homepages.inf.ed.ac.uk/wenfei/" style="text-decoration:none">Prof. Wenfei Fan</a> at the <a href="https://www.ed.ac.uk/informatics" style="text-decoration:none">The University of Edinburgh</a> in the <a href="https://web.inf.ed.ac.uk/lfcs" style="text-decoration:none">School of Informatics</a>. I obtained the MSc in Computer Science
     from the <a href="https://bbf.itu.edu.tr/en/home" style="text-decoration:none">Faculty of Computer and Informatics Engineering, Istanbul Technical University</a>,
       working with <a href="https://scholar.google.com/citations?user=E5OlkJMAAAAJ&hl=en" style="text-decoration:none">
@@ -84,6 +84,30 @@
 <article>
 <table >
   <tr>
+    <td><strong>Jan 2023</strong></td>
+    <td style="width: 87%">
+        	I interviewed with Google
+    </td>
+  </tr>
+  <tr>
+    <td><strong>Dec 2022</strong></td>
+    <td style="width: 87%">
+        	I interviewed with Amazon
+    </td>
+  </tr>
+  <tr>
+    <td><strong>Dec 2022</strong></td>
+    <td style="width: 87%">
+        We have submitted our paper to VLDB 2023
+    </td>
+  </tr> 
+  <tr>
+    <td><strong>Aug 2022</strong></td>
+    <td style="width: 87%">
+        I have started my internship at TikTok London as an ML Research intern
+    </td>
+  </tr>
+  <tr>
     <td><strong>Aug 2022</strong></td>
     <td style="width: 87%">
         I have started my internship at TikTok London as an ML Research intern
@@ -95,14 +119,6 @@
         I have successfully finished my internship at Huawei London
     </td>
   </tr>
-
-  <tr>
-    <td><strong>July 2022</strong></td>
-    <td style="width: 87%">
-        We have submitted our paper to SIGMOD 2023
-    </td>
-  </tr>
-
   <tr>
     <td><strong>May 2022</strong></td>
     <td style="width: 87%">
