--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
       working with <a href="https://scholar.google.com/citations?user=E5OlkJMAAAAJ&hl=en" style="text-decoration:none">
        Prof. Sule Gunduz Oguducu</a>. My undergrad was also in computer engineering from Karadeniz Technical University.
 		I'm working on entity representation and learning on both relational and graph-structured data.
-		I develop distributed and parallel systems to manage large data.
+		I also develop distributed and parallel systems to manage large data.
 		</p>
     <p></p>
 		<p>
-			I am interested in reasoning and representation of entities. Also, l love camping and nature but,
+			I am interested in ML/DL in general. I have experience on Recommender Systems and Ranking. Also, l love camping and nature but,
 			still draw trees upside-down!
 		</p>
 	<div>
@@ -98,13 +98,7 @@
   <tr>
     <td><strong>Dec 2022</strong></td>
     <td style="width: 87%">
-        We have submitted our paper to VLDB 2023
-    </td>
-  </tr> 
-  <tr>
-    <td><strong>Aug 2022</strong></td>
-    <td style="width: 87%">
-        I have started my internship at TikTok London as an ML Research intern
+        We have submitted our paper,<i> Learning and Deducing Temporal Orders</i>, to VLDB 2023
     </td>
   </tr>
   <tr>
