--- a/index.html
+++ b/index.html
@@ -177,16 +177,16 @@
 <hr>
 <h2> Publications </h2>
       <article>
-				<p class="all"><strong>Linking Entities across Relations and Graphs</strong> <small><i> Collaborated with Alibaba</i></small> <br />
+				<p class="all"><strong>Linking Entities across Relations and Graphs</strong> <small><i> Collab. with <a href="https://www.alibaba.com/">alibaba.com</a></i></small> <br />
 						Wenfei Fan, Liang Geng, Ruochun Jin, Ping Liu, Resul Tugay, Wenyuan Yu, <em>ICDE</em>, 2022<br />
             <small><i>Authors are alphabetically ordered by their surnames</i></small> <br>
             <a href="https://homepages.inf.ed.ac.uk/s1837143/HER_full.pdf">[paper]</a><a href="https://video.computer.org/icde22-videos/paper_39.mp4.html">[video]</a><a href="assets/icde.pptx">[slides]</a><a href="https://github.com/resultugay/her-toy">[code]</a></p>
 
-				<p class="all"><strong>A deep hybrid model for recommendation systems</strong> <br />
+				<p class="all"><strong>A deep hybrid model for recommendation systems</strong>  <small><i> Collab. with <a href="https://www.kariyer.net/">kariyer.net</a></i></small> <br />
 									  Muhammet Çakır, Şule Gündüz Öğüdücü, and Resul Tugay, <em>AIAI</em>, 2019<br />
 			  <a href="https://arxiv.org/pdf/2009.09748.pdf">[paper]</a> [code available upon request]</p>
 
-			  <p class="all"><strong>Hotel Recommendation System Based on User Profiles and Collaborative Filtering</strong> <br />
+			  <p class="all"><strong>Hotel Recommendation System Based on User Profiles and Collaborative Filtering</strong>  <small><i> Collab. with <a href="https://www.etstur.com/">etstur.com</a></i></small> <br />
 										Bekir Berker Türker, Resul Tugay, Ipek Kızıl, Şule Gündüz Öğüdücü, <em>UBMK</em>, 2019<br />
 				<a href="https://arxiv.org/pdf/2009.14045.pdf">[paper]</a> [code belongs to the company]</p>
 
@@ -199,7 +199,7 @@
 										Resul Tugay, <em>MSc Thesis</em>, 2018<br />
  					<a href="https://tez.yok.gov.tr/UlusalTezMerkezi/tezDetay.jsp?id=geboD41-dgfgjZq3Zilkpg&no=tLZ5iM_D-9ZClQO4FvG5xw">[paper]</a> <a href="https://bitbucket.org/resultugay/gpart-thesis">[code]</a>
 
-				<p class="all"><strong>Demand Prediction using Machine Learning Methods and Stacked Generalization</strong> <br />
+				<p class="all"><strong>Demand Prediction using Machine Learning Methods and Stacked Generalization</strong><small><i> Collab. with <a href="https://www.n11.com/">n11.com</a></i></small> <br />
 								Resul Tugay, Şule Gündüz Öğüdücü , <em>DATA</em>, 2017<br />
 
 				<a href="https://arxiv.org/pdf/2009.09756.pdf">[paper]</a> [code belongs to the company]</p>
