--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
       working with <a href="https://scholar.google.com/citations?user=E5OlkJMAAAAJ&hl=en" style="text-decoration:none">
        Prof. Sule Gunduz Oguducu</a>. My undergrad was also in computer engineering from Karadeniz Technical University.
 		I'm working on entity representation and learning on both relational and graph-structured data.
-		I also develop distributed and parallel systems to manage large data.
+		I also work on Large Language Models.
 		</p>
     <p></p>
 		<p>
-			I am interested in ML/DL in general. I have experience on Recommender Systems and Ranking. Also, l love camping and nature but,
+			I am interested in ML/DL and NLP in general. I have experience on Recommender Systems and Ranking. Also, l love camping and nature but,
 			still draw trees upside-down!
 		</p>
 	<div>
