--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
   <tr>
     <td><strong>Jan 2023</strong></td>
     <td style="width: 87%">
+        	Our paper,<i> Learning and Deducing Temporal Orders</i>, has been accepted to VLDB 2023
+    </td>
+  </tr>
+  <tr>
+    <td><strong>Jan 2023</strong></td>
+    <td style="width: 87%">
         	I interviewed with Google
     </td>
   </tr>
@@ -177,6 +183,10 @@
 <hr>
 <h2> Publications </h2>
       <article>
+           <p class="all"><strong>Learning and Deducing Temporal Orders</strong> <br />
+						Wenfei Fan, Resul Tugay, Yaoshu Wang, Min Xie, Muhammad Asif Ali, <em>VLDB</em>, 2023<br />
+            <a href="https://github.com/resultugay/GATE/blob/main/Learning_and_Deducing_Temporal_Orders.pdf">[paper]</a><a href="https://github.com/resultugay/GATE">[code]</a></p>
+
 				<p class="all"><strong>Linking Entities across Relations and Graphs</strong> <small><i> Collab. with <a href="https://www.alibaba.com/">alibaba.com</a></i></small> <br />
 						Wenfei Fan, Liang Geng, Ruochun Jin, Ping Liu, Resul Tugay, Wenyuan Yu, <em>ICDE</em>, 2022<br />
             <small><i>Authors are alphabetically ordered by their surnames</i></small> <br>
