--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 
 		</h1>
 
-		<p> I'm a forth year PhD student supervised by
+		<p> I’m a final year PhD candidate supervised by
 		<a href="https://homepages.inf.ed.ac.uk/wenfei/" style="text-decoration:none">Prof. Wenfei Fan</a> at the <a href="https://www.ed.ac.uk/informatics" style="text-decoration:none">The University of Edinburgh</a> in the <a href="https://web.inf.ed.ac.uk/lfcs" style="text-decoration:none">School of Informatics</a>. I obtained the MSc in Computer Science
     from the <a href="https://bbf.itu.edu.tr/en/home" style="text-decoration:none">Faculty of Computer and Informatics Engineering, Istanbul Technical University</a>,
       working with <a href="https://scholar.google.com/citations?user=E5OlkJMAAAAJ&hl=en" style="text-decoration:none">
        Prof. Sule Gunduz Oguducu</a>. My undergrad was also in computer engineering from Karadeniz Technical University.
 		I'm working on entity representation and learning on both relational and graph-structured data.
-		I also work on Large Language Models.
+		I also work on Large Language Models. I expect to finish my PhD at the end of 2023 and looking for a job!
 		</p>
     <p></p>
 		<p>
@@ -92,7 +92,7 @@
   <tr>
     <td><strong>Jan 2023</strong></td>
     <td style="width: 87%">
-        	I interviewed with Google
+        	I interviewed with Google, <span style="color: red;">project matching stage! Let me know if you are interested in!</span>
     </td>
   </tr>
   <tr>
