--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <tr>
     <td><strong>Jan 2023</strong></td>
     <td style="width: 87%">
-        	I interviewed with Google, <span style="color: red;">project matching stage! Let me know if you are interested in!</span>
+        	I interviewed with Google
     </td>
   </tr>
   <tr>
