profile photo update

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <section style="font-family: 'Source Sans', sans-serif;">
 <article>
 	<div id="circle-shape-example">
-		<img src="assets/profile.jpeg" class="curve">
+		<img src="assets/profile2.jpeg" class="curve">
 		<h1>Resul Tugay
 
 		</h1>
