--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
       working with <a href="https://scholar.google.com/citations?user=E5OlkJMAAAAJ&hl=en" style="text-decoration:none">
        Prof. Sule Gunduz Oguducu</a>. My undergrad was also in computer engineering from Karadeniz Technical University.
 		I'm working on entity representation and learning on both relational and graph-structured data.
-		I also work on Large Language Models. I expect to finish my PhD at the end of 2023 and looking for a job!
+		I also work on Large Language Models.
 		</p>
-    <p></p>
 		<p>
 			I am interested in ML/DL and NLP in general. I have experience on Recommender Systems and Ranking. Also, l love camping and nature but,
 			still draw trees upside-down!
@@ -78,11 +77,17 @@
 
 </article>
 
-<br id="news">
+<id="news">
 <hr>
 <h2> News  </h2>
 <article>
 <table >
+  <tr>
+    <td><strong>Aug 2023</strong></td>
+    <td style="width: 87%">
+        	I reviewed NeurIPS papers, Recommender Systems and Language Models
+    </td>
+  </tr>
   <tr>
     <td><strong>Mar 2023</strong></td>
     <td style="width: 87%">
@@ -92,7 +97,7 @@
   <tr>
     <td><strong>Jan 2023</strong></td>
     <td style="width: 87%">
-        	I interviewed with Google
+        	I interviewed with Google (Project Matching Stage)
     </td>
   </tr>
   <tr>
@@ -263,7 +268,8 @@ p span.displaynone { display:none; }
 	<a id='scramble' class="fa fa-envelope" style="font-size:40px" ></a>
   <br>
 	</br>
-  <p>Copyleft ©  <script>document.write(new Date().getFullYear())</script> Resul Tugay</p>
+  <p>Copyleft ©  <script>document.write(new Date().getFullYear())</script> Resul Tugay <!--Please do not delete this for citing purpose -->| Powered by <a href="https://resultugay.github.io/" style="text-decoration:none">Resul Tugay</a></p>
+  
 </div>
 <script src="assets/unscramble.js"></script>
 
