--- a/index.html
+++ b/index.html
@@ -77,11 +77,17 @@
 
 </article>
 
-<id="news">
+<div id="news">
 <hr>
 <h2> News  </h2>
 <article>
 <table >
+  <tr>
+    <td><strong>Aug 2023</strong></td>
+    <td style="width: 87%">
+        	I passed my PhD viva with minor corrections
+    </td>
+  </tr>
   <tr>
     <td><strong>Aug 2023</strong></td>
     <td style="width: 87%">
@@ -92,24 +98,6 @@
     <td><strong>Mar 2023</strong></td>
     <td style="width: 87%">
         	Our paper,<i> Learning and Deducing Temporal Orders</i>, has been accepted to VLDB 2023
-    </td>
-  </tr>
-  <tr>
-    <td><strong>Jan 2023</strong></td>
-    <td style="width: 87%">
-        	I interviewed with Google (Project Matching Stage)
-    </td>
-  </tr>
-  <tr>
-    <td><strong>Dec 2022</strong></td>
-    <td style="width: 87%">
-        	I interviewed with Amazon
-    </td>
-  </tr>
-  <tr>
-    <td><strong>Dec 2022</strong></td>
-    <td style="width: 87%">
-        We have submitted our paper,<i> Learning and Deducing Temporal Orders</i>, to VLDB 2023
     </td>
   </tr>
   <tr>
@@ -136,24 +124,7 @@
         I will be joining Huawei London as an ML Research intern between May-Aug 2022
     </td>
   </tr>
-  <tr>
-    <td><strong>Mar 2022</strong></td>
-    <td style="width: 87%">
-        I interviewed with Meta Core Machine Learning AI Team
-    </td>
-  </tr>
-  <tr>
-    <td><strong>Mar 2022</strong></td>
-    <td style="width: 87%">
-        I interviewed with TikTok
-    </td>
-  </tr>
-  <tr>
-    <td><strong>Jan 2022</strong></td>
-    <td style="width: 87%">
-        I interviewed with Huawei London and Huawei Edinburgh
-    </td>
-  </tr>
+
   <tr>
     <td><strong>Nov 2021</strong></td>
     <td style="width: 87%">
@@ -164,12 +135,6 @@
   <td> <strong>Nov 2021</strong> </td>
     <td>
         I became a research assistant at The University of Edinburgh
-    </td>
-  </tr>
-  <tr>
-    <td> <strong>Oct 2021</strong> </td>
-    <td>
-        I interviewed with Facebook
     </td>
   </tr>
   <tr>
