--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 				<p class="all"><strong>A deep hybrid model for recommendation systems</strong>  <small><i> Collab. with <a href="https://www.kariyer.net/">kariyer.net</a></i></small> <br />
 									  Muhammet Çakır, Şule Gündüz Öğüdücü, and Resul Tugay, <em>AIAI</em>, 2019<br />
-			  <a href="https://arxiv.org/pdf/2009.09748.pdf">[paper]</a> [code available upon request]</p>
+			  <a href="https://arxiv.org/pdf/2009.09748.pdf">[paper]</a> <a href="https://github.com/resultugay/HybridRec">[code]</a></p>
 
 			  <p class="all"><strong>Hotel Recommendation System Based on User Profiles and Collaborative Filtering</strong>  <small><i> Collab. with <a href="https://www.etstur.com/">etstur.com</a></i></small> <br />
 										Bekir Berker Türker, Resul Tugay, Ipek Kızıl, Şule Gündüz Öğüdücü, <em>UBMK</em>, 2019<br />
