--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 		</h1>
 
-		<p> I’m a final year PhD candidate supervised by
+		<p> I finished my PhD under supervision of
 		<a href="https://homepages.inf.ed.ac.uk/wenfei/" style="text-decoration:none">Prof. Wenfei Fan</a> at the <a href="https://www.ed.ac.uk/informatics" style="text-decoration:none">The University of Edinburgh</a> in the <a href="https://web.inf.ed.ac.uk/lfcs" style="text-decoration:none">School of Informatics</a>. I obtained the MSc in Computer Science
     from the <a href="https://bbf.itu.edu.tr/en/home" style="text-decoration:none">Faculty of Computer and Informatics Engineering, Istanbul Technical University</a>,
       working with <a href="https://scholar.google.com/citations?user=E5OlkJMAAAAJ&hl=en" style="text-decoration:none">
@@ -83,6 +83,12 @@
 <article>
 <table >
   <tr>
+    <td><strong>Oct 2023</strong></td>
+    <td style="width: 87%">
+        	I reviewed ICLR papers, Personalized Systems and Language Models
+    </td>
+  </tr>
+  <tr>
     <td><strong>Aug 2023</strong></td>
     <td style="width: 87%">
         	I passed my PhD viva with minor corrections
@@ -100,6 +106,19 @@
         	Our paper,<i> Learning and Deducing Temporal Orders</i>, has been accepted to VLDB 2023
     </td>
   </tr>
+    <tr>
+    <td><strong>Jan 2023</strong></td>
+    <td style="width: 87%">
+        	I interviewed with Google (Project Matching Stage, Hiring Freeze)
+    </td>
+  </tr>
+  <tr>
+    <td><strong>Dec 2022</strong></td>
+    <td style="width: 87%">
+        	I interviewed with Amazon
+    </td>
+  </tr>
+
   <tr>
     <td><strong>Aug 2022</strong></td>
     <td style="width: 87%">
@@ -116,6 +135,12 @@
     <td><strong>May 2022</strong></td>
     <td style="width: 87%">
         I have joined Huawei London and l am working on Multi Domain Recommendation System
+    </td>
+  </tr>
+  <tr>
+    <td><strong>Mar 2022</strong></td>
+    <td style="width: 87%">
+        I interviewed with Meta Core Machine Learning AI Team
     </td>
   </tr>
   <tr>
