--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <article>
            <p class="all"><strong>Learning and Deducing Temporal Orders</strong> <br />
 						Wenfei Fan, Resul Tugay, Yaoshu Wang, Min Xie, Muhammad Asif Ali, <em>VLDB</em>, 2023<br />
-            <a href="https://github.com/resultugay/GATE/blob/main/Learning_and_Deducing_Temporal_Orders.pdf">[paper]</a><a href="https://github.com/resultugay/GATE">[code]</a></p>
+            <a href="https://github.com/resultugay/GATE/blob/main/Learning_and_Deducing_Temporal_Orders.pdf">[paper]</a><a href="assets/vldb23.pptx">[slides]</a><a href="https://github.com/resultugay/GATE">[code]</a></p>
 
 				<p class="all"><strong>Linking Entities across Relations and Graphs</strong> <small><i> Collab. with <a href="https://www.alibaba.com/">alibaba.com</a></i></small> <br />
 						Wenfei Fan, Liang Geng, Ruochun Jin, Ping Liu, Resul Tugay, Wenyuan Yu, <em>ICDE</em>, 2022<br />
