--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
 
 		</h1>
 
-		<p> I finished my PhD under supervision of
+		<p> I am a lecturer at <a href="https://mf-bm.gazi.edu.tr/" style="text-decoration:none">Gazi University.</a>
+        If you want to work on ML, NLP or Recommender Systems and understand <a href="https://gist.github.com/resultugay/28e9a590a14555159c210fd89ffae843" style="text-decoration:none">this</a> and
+        <a href="https://gist.github.com/resultugay/8860a445bd412a3637b7fd16d1ccfefb" style="text-decoration:none">this</a> and able to code them, please <a href = "mailto: resultugay@gazi.edu.tr" style="text-decoration:none">contact me</a>.
+</p>
+        <p> I obtained my PhD under supervision of
 		<a href="https://homepages.inf.ed.ac.uk/wenfei/" style="text-decoration:none">Prof. Wenfei Fan</a> at the <a href="https://www.ed.ac.uk/informatics" style="text-decoration:none">The University of Edinburgh</a> in the <a href="https://web.inf.ed.ac.uk/lfcs" style="text-decoration:none">School of Informatics</a>. I obtained the MSc in Computer Science
     from the <a href="https://bbf.itu.edu.tr/en/home" style="text-decoration:none">Faculty of Computer and Informatics Engineering, Istanbul Technical University</a>,
       working with <a href="https://scholar.google.com/citations?user=E5OlkJMAAAAJ&hl=en" style="text-decoration:none">
@@ -82,6 +86,12 @@
 <h2> News  </h2>
 <article>
 <table >
+    <tr>
+    <td><strong>Nov 2023</strong></td>
+    <td style="width: 87%">
+        	I started as a lecturer at Gazi University
+    </td>
+  </tr>
   <tr>
     <td><strong>Oct 2023</strong></td>
     <td style="width: 87%">
