--- a/index.html
+++ b/index.html
@@ -81,12 +81,42 @@
 
 </article>
 
-<div id="news">
+<div id="news" style="overflow-y: scroll; height:300px;">
 <hr>
 <h2> News  </h2>
 <article>
-<table >
-    <tr>
+<table>
+  <tr>
+    <td><strong>July 2024</strong></td>
+    <td style="width: 87%">
+       I gave a talk at Gazi University, Turkey
+    </td>
+  </tr>
+  <tr>
+    <td><strong>May 2024</strong></td>
+    <td style="width: 87%">
+       Our paper,<i> Enhancing Cross-Market Recommendation System with Graph Isomorphism Networks</i>, has been accepted to ICMLT 2024
+    </td>
+  </tr>
+  <tr>
+    <td><strong>May 2024</strong></td>
+    <td style="width: 87%">
+       Our paper,<i> A GNN Model with Adaptive Weights for Session-Based Recommendation Systems</i>, has been accepted to ICMLT 2024
+    </td>
+  </tr>
+  <tr>
+    <td><strong>Dec 2023</strong></td>
+    <td style="width: 87%">
+       I have started a new position as a scientific advisor to <a href="https://www.btsgrp.com">BTS Group</a>
+    </td>
+  </tr>
+  <tr>
+    <td><strong>Dec 2023</strong></td>
+    <td style="width: 87%">
+       I gave a talk at Istanbul Technical University, Turkey
+    </td>
+  </tr>
+  <tr>
     <td><strong>Nov 2023</strong></td>
     <td style="width: 87%">
         	I started as a lecturer at Gazi University
@@ -182,7 +212,8 @@
 </table>
 
 </article>
-<br id="publications">
+</div>
+<div id="publications" style="overflow-y: scroll; height:300px;">
 
 
 <hr>
@@ -222,10 +253,14 @@
 
 		  </article>
 
-			<hr id="teaching">
+    </div>
+      <hr>
+			<div id="teaching" style="overflow-y: scroll; height:300px;">
 			<h2 > Teaching </h2>
 			<article>
-				<p class="all"><strong>Introductory Applied Machine Learning</strong>,<small><i> The University of Edinburgh</i></small> <br />
+        <p class="all"><strong>Data Mining</strong>,<small><i> Gazi University</i></small> <br />
+        <p class="all"><strong>Introductory Applied Machine Learning(Grad Level)</strong>,<small><i> Gazi University</i></small> <br />
+				<p class= "all"><strong>Introductory Applied Machine Learning</strong>,<small><i> The University of Edinburgh</i></small> <br />
 						Leading Teaching Assistant, Hiroshi Shimodaira & Tiejun Ma, Spring 2021<br />
 				<p class="all"><strong>Introductory Applied Machine Learning</strong>,<small><i> The University of Edinburgh</i></small>  <br />
 						Marker & Exam Marker, Chris Williams & Amos Storkey, Fall 2019<br />
@@ -250,6 +285,7 @@
 								Teaching Assistant, Şule Gündüz Öğüdücü & Turgut Uyar, Spring 2016 & 2017<br />
 
 			</article>
+      </div>
 </section>
 
 <style type=”text/css”>
