--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
   <tr>
     <td><strong>July 2024</strong></td>
     <td style="width: 87%">
+      Our paper,<i>   Data Augmentation in Graph Neural Networks: The Role of Generated Synthetic Graphs
+      </i>, has been accepted to ECML PKDD 2024
+    </td>
+  </tr>
+  <tr>
+    <td><strong>July 2024</strong></td>
+    <td style="width: 87%">
        I gave a talk at Gazi University, Turkey
     </td>
   </tr>
@@ -301,13 +308,12 @@ p span.displaynone { display:none; }
 	&nbsp;
 	<a href="https://scholar.google.com.tr/citations?user=5l2Aq4kAAAAJ&hl=en&oi=ao"><i class="ai ai-google-scholar " style="font-size:40px"></i></a>
 	&nbsp;
-	<a id='scramble' class="fa fa-envelope" style="font-size:40px" ></a>
+	<a  href="mailto:resultugay@hotmail.com" class="fa fa-envelope" style="font-size:40px" ></a>
   <br>
 	</br>
   <p>Copyleft ©  <script>document.write(new Date().getFullYear())</script> Resul Tugay <!--Please do not delete this for citing purpose -->| Powered by <a href="https://resultugay.github.io/" style="text-decoration:none">Resul Tugay</a></p>
   
 </div>
-<script src="assets/unscramble.js"></script>
 
 </body>
 </html>
