--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
 <article>
 <table>
   <tr>
+    <td><strong>Aug 2024</strong></td>
+    <td style="width: 87%">
+      I am a program committee member of AAAI 2024
+    </td>
+  </tr>
+  <tr>
     <td><strong>July 2024</strong></td>
     <td style="width: 87%">
       Our paper,<i>   Data Augmentation in Graph Neural Networks: The Role of Generated Synthetic Graphs
