--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <tr>
     <td><strong>Aug 2024</strong></td>
     <td style="width: 87%">
-      I am a program committee member of AAAI 2024
+      I am a program committee member of AAAI 2025 and reviewer of ICLR 2025
     </td>
   </tr>
   <tr>
