--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 		</h1>
 
-		<p> I am a lecturer at <a href="https://mf-bm.gazi.edu.tr/" style="text-decoration:none">Gazi University.</a>
+		<p> I am an Asst. Prof in the Department of Artificial Intelligence and Data Engineering at <a href="https://www.atauni.edu.tr" style="text-decoration:none">Ataturk University.</a>
         If you want to work on ML, NLP or Recommender Systems and understand <a href="https://gist.github.com/resultugay/28e9a590a14555159c210fd89ffae843" style="text-decoration:none">this</a> and
         <a href="https://gist.github.com/resultugay/8860a445bd412a3637b7fd16d1ccfefb" style="text-decoration:none">this</a> and able to code them, please <a href = "mailto: resultugay@gazi.edu.tr" style="text-decoration:none">contact me</a>.
 </p>
@@ -86,6 +86,12 @@
 <h2> News  </h2>
 <article>
 <table>
+  <tr>
+    <td><strong>Mar 2025</strong></td>
+    <td style="width: 87%">
+        	I started as an Asst. Prof at Ataturk University, Erzurum, Turkey
+    </td>
+  </tr>
   <tr>
     <td><strong>Aug 2024</strong></td>
     <td style="width: 87%">
@@ -232,7 +238,24 @@
 <hr>
 <h2> Publications </h2>
       <article>
-           <p class="all"><strong>Learning and Deducing Temporal Orders</strong> <br />
+ 
+        <p class="all"><strong>Data Augmentation in Graph Neural Networks: The Role of Generated Synthetic Graphs</strong> <br />
+          Sümeyye Baş, Kıymet Kaya, Resul Tugay, Şule Gündüz Öğüdücü <em>ECML PKDD</em>, 2024<br />
+          <a href="https://arxiv.org/pdf/2407.14765">[paper]</a></p>
+
+        <p class="all"><strong> Enhancing Cross-Market Recommendation System with Graph Isomorphism Networks: A Novel Approach to Personalized User Experience</strong> <br />
+          Sümeyye Öztürk, Resul Tugay, Şule Gündüz Öğüdücü <em>ICMLT</em>, 2024<br />
+          <a href="https://dl.acm.org/doi/pdf/10.1145/3674029.3674069">[paper]</a></p>
+
+        <p class="all"><strong>A GNN Model with Adaptive Weights for Session-Based Recommendation Systems</strong> <br />
+          Begüm Özbay, Resul Tugay, Şule Gündüz Öğüdücü <em>ICMLT</em>, 2024<br />
+          <a href="https://dl.acm.org/doi/pdf/10.1145/3674029.3674070">[paper]</a></p>
+
+          <p class="all"><strong>IBB traffic graph data: Benchmarking and road traffic prediction model</strong> <br />
+            Eren oluğ, Kıymet Kaya, Resul Tugay, Şule Gündüz Öğüdücü <em>CAMAD</em>, 2024<br />
+            <a href="https://arxiv.org/pdf/2408.01016">[paper]</a></p>
+
+        <p class="all"><strong>Learning and Deducing Temporal Orders</strong> <br />
 						Wenfei Fan, Resul Tugay, Yaoshu Wang, Min Xie, Muhammad Asif Ali, <em>VLDB</em>, 2023<br />
             <a href="https://github.com/resultugay/GATE/blob/main/Learning_and_Deducing_Temporal_Orders.pdf">[paper]</a><a href="assets/vldb23.pptx">[slides]</a><a href="https://github.com/resultugay/GATE">[code]</a></p>
 
@@ -271,6 +294,7 @@
 			<div id="teaching" style="overflow-y: scroll; height:300px;">
 			<h2 > Teaching </h2>
 			<article>
+        <p class="all"><strong>Foundations of Data Science</strong>,<small><i> Ataturk University</i></small> <br />
         <p class="all"><strong>Data Mining</strong>,<small><i> Gazi University</i></small> <br />
         <p class="all"><strong>Introductory Applied Machine Learning(Grad Level)</strong>,<small><i> Gazi University</i></small> <br />
 				<p class= "all"><strong>Introductory Applied Machine Learning</strong>,<small><i> The University of Edinburgh</i></small> <br />
