--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <li class="nav-item"><a class="nav-link scrollto" href="#news" style="color:#000"> news</a></li>
 		<li class="nav-item"><a class="nav-link scrollto" href="#publications" style="color:#000"> publications</a></li>
 		<li class="nav-item"><a class="nav-link scrollto" href="#teaching" style="color:#000"> teaching </a></li>
+    <li class="nav-item"><a class="nav-link scrollto" href="assets/resultugay_cv.pdf" style="color:#000"> CV </a></li>
 	</ul>
   </div>
  </div> <!-- container-fluid.// -->
@@ -86,6 +87,12 @@
 <h2> News  </h2>
 <article>
 <table>
+  <tr>
+    <td><strong>Apr 2025</strong></td>
+    <td style="width: 87%">
+       I gave a talk at the Institute for Data Science and Artificial Intelligence at Boğaziçi University, İstanbul, Turkey
+    </td>
+  </tr>
   <tr>
     <td><strong>Mar 2025</strong></td>
     <td style="width: 87%">
